syntax = "proto3";
package proto;

option go_package = ".;proto";

service Emailer {
  rpc SendOneEmail (SendOneEmailRequest) returns (SendOneEmailResponse) {}
}

message SendOneEmailRequest {
  string from = 1;
  string from_name = 2;
  string to = 3;
  string subject = 4;
  string text = 5;
}

message SendOneEmailResponse {
  // 0 — no error.
  // 1 — internal error.
  int64 error_code = 1;
}
